--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,8 @@
     "@types/multer": "^1.4.11",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
+    "@types/pg": "^8.10.9",
+    "@types/cors": "^2.8.17",
     "typescript": "^5.3.3",
     "tsx": "^4.7.0"
   }
